addysnip/base/ui/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: addysnip
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-addysnip-dev-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-addysnip-dev-ui
    spec:
      containers:
      - image: gcr.io/addysnip/ui:80c1c4ea
        imagePullPolicy: Always
        name: ui
        ports:
        - containerPort: 80
          name: 80tcp
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: gar-json-key
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
