addysnip/base/ui/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: addysnip
spec:
  clusterIP: 10.245.135.82
  clusterIPs:
  - 10.245.135.82
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80tcp
    port: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-addysnip-dev-ui
