addysnip/base/ui/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: addysnip
spec:
  ingressClassName: nginx
  rules:
  - host: addysnip.com
    http:
      paths:
      - backend:
          service:
            name: ui
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: www.addysnip.com
    http:
      paths:
      - backend:
          service:
            name: ui
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.addysnip.com
    - addysnip.com
    secretName: addysnip-com-tls
